--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,21 @@
   <name>reference-implementation</name>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
   </properties>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>      
+  	</plugins>
+  </build>
 
   <dependencies>
     <dependency>
