--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.0.1</version>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>javax.enterprise</groupId>
+    	<artifactId>cdi-api</artifactId>
+    	<version>1.1.EDR1.2</version>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.jboss.spec.javax.ejb</groupId>
+    	<artifactId>jboss-ejb-api_3.1_spec</artifactId>
+    	<version>1.0.2.Final</version>
+    	<scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
