Added checkstyle module containing checkstyle configuration file

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <name>Parent Project</name>
  
   <modules>
+  	<module>checkstyle</module>
     <module>reference-implementation</module>
   </modules>
 
