--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.plspro</groupId>
-  <version>0.0.1-SNAPSHOT</version>
-  <artifactId>parent</artifactId>
-  <packaging>pom</packaging>
-  <name>Parent Project</name>
- 
-  <modules>
-  	<module>checkstyle</module>
-    <module>reference-implementation</module>
-  </modules>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.plspro</groupId>
+	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>parent</artifactId>
+	<packaging>pom</packaging>
+	<name>Parent Project</name>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<modules>
+		<module>checkstyle</module>
+		<module>reference-implementation</module>
+	</modules>
 
 </project>
