--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.plspro</groupId>
+	<groupId>com.pls</groupId>
 	<version>0.0.1-SNAPSHOT</version>
 	<artifactId>parent</artifactId>
 	<packaging>pom</packaging>
-	<name>Parent Project</name>
+	<name>Umbrella module for all project modules</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
