--- a/reference-implementation/src/main/webapp/WEB-INF/web.xml
+++ b/reference-implementation/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,30 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
-	<welcome-file-list>
-		<welcome-file>TestServlet</welcome-file>
-	</welcome-file-list>
+
+	<filter>
+		<filter-name>guiceFilter</filter-name>
+		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>guiceFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!-- for jmeter tests only. remove in production -->
+	<context-param>
+		<param-name>disable-xsrf-protection</param-name>
+   		<param-value>true</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>com.pls.ui.ApplicationConfig</listener-class>		
+	</listener>
+	
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
+	
+	
 </web-app>
