--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -39,6 +39,8 @@
 		<beanvalidation-addon.version>1.0.0</beanvalidation-addon.version>
 		<messagebox-addon.version>1.1.1</messagebox-addon.version>
 		<tableexport-addon.version>1.3.0</tableexport-addon.version>
+		<commons-io.version>2.4</commons-io.version>
+		<apache-pio.version>3.8</apache-pio.version>
 	</properties>
 
 	<build>
@@ -179,13 +181,13 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.8</version>
+			<version>${apache-pio.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>${commons-io.version}</version>
 		</dependency>
 
 		<!-- not used, but required due to jboss classloader bug -->		
