--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -29,18 +29,17 @@
 		<cdi-api.version>1.1.EDR1.2</cdi-api.version>
 		<jboss-ejb-api.version>1.0.2.Final</jboss-ejb-api.version>
 		<jpa-api.version>1.0.1.Final</jpa-api.version>
+		<junit.version>4.8.1</junit.version>
 
 		<!-- dependancies for vaadin -->
-		<guava.version>13.0</guava.version>
 		<vaadin.version>6.8.1</vaadin.version>
-		<junit.version>4.8.1</junit.version>
-		<sisu-guice.version>3.1.2</sisu-guice.version>
 		<hibernate-validator.version>4.3.0.Final</hibernate-validator.version>
 		<beanvalidation-addon.version>1.0.0</beanvalidation-addon.version>
 		<messagebox-addon.version>1.1.1</messagebox-addon.version>
 		<tableexport-addon.version>1.3.0</tableexport-addon.version>
 		<commons-io.version>2.4</commons-io.version>
 		<apache-pio.version>3.8</apache-pio.version>
+		<vaadin-cdi-utils.version>0.9.9</vaadin-cdi-utils.version>
 	</properties>
 
 	<build>
@@ -151,30 +150,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
+   			<groupId>org.vaadin.addons</groupId>
+   			<artifactId>cdi-utils</artifactId>
+   			<version>${vaadin-cdi-utils.version}</version>
 		</dependency>
-
-		<!-- patched versions of guice (see https://github.com/sonatype/sisu-guice) -->
-		<dependency>
-			<groupId>org.sonatype.sisu</groupId>
-			<artifactId>sisu-guice</artifactId>
-			<version>${sisu-guice.version}</version>
-
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.sonatype.sisu.inject</groupId>
-			<artifactId>guice-servlet</artifactId>
-			<version>${sisu-guice.version}</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>com.vaadin.addon</groupId>
 			<artifactId>beanvalidation-addon</artifactId>
