--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -30,6 +30,7 @@
 		<jboss-ejb-api.version>1.0.2.Final</jboss-ejb-api.version>
 		<jpa-api.version>1.0.1.Final</jpa-api.version>
 		<junit.version>4.8.1</junit.version>
+		<cargo.version>1.1.4</cargo.version>
 
 		<!-- dependancies for vaadin -->
 		<vaadin.version>6.8.1</vaadin.version>
@@ -40,6 +41,10 @@
 		<commons-io.version>2.4</commons-io.version>
 		<apache-pio.version>3.8</apache-pio.version>
 		<vaadin-cdi-utils.version>0.9.9</vaadin-cdi-utils.version>
+		
+		<!-- jboss instances -->
+		<jboss.host>localhost</jboss.host>
+		<jboss.port>9999</jboss.port>
 	</properties>
 
 	<build>
@@ -92,6 +97,39 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>${cargo.version}</version>
+				<configuration>
+					<container>
+						<containerId>jboss71x</containerId>
+						<type>remote</type>
+					</container>
+					<configuration>
+						<type>runtime</type>
+						<properties>
+							<cargo.hostname>${jboss.host}</cargo.hostname>
+							<cargo.jboss.management.port>${jboss.port}</cargo.jboss.management.port>
+						</properties>
+						<deployables>
+							<deployable>
+								<properties>
+									<context>refimpl</context>
+								</properties>
+							</deployable>
+						</deployables>
+					</configuration>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.jboss.as</groupId>
+						<artifactId>jboss-as-controller-client</artifactId>
+						<version>${jboss-deployer.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
