--- a/reference-implementation/src/main/webapp/WEB-INF/web.xml
+++ b/reference-implementation/src/main/webapp/WEB-INF/web.xml
@@ -13,5 +13,35 @@
 	<session-config>
 		<session-timeout>10</session-timeout>
 	</session-config>
+	
+	<welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+	
+	<security-constraint>
+    	<web-resource-collection>
+      		<web-resource-name>Reference Implementation</web-resource-name>
+      		<description>The entire application is protected</description>
+      		<url-pattern>/*</url-pattern>
+    	</web-resource-collection>
+    	<auth-constraint>
+       		<description>Only valid users are allowed</description>
+        	<role-name>USER_ROLE</role-name>        	
+    	</auth-constraint>
+  	</security-constraint>
+  	
+  	
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>form-auth</realm-name>
+        <form-login-config>
+            <form-login-page>/login.jsp</form-login-page>
+            <form-error-page>/loginerror.jsp</form-error-page>
+        </form-login-config>        
+    </login-config>
+    <security-role>
+        <role-name>USER_ROLE</role-name>
+    </security-role>
+    
 
 </web-app>
