--- a/reference-implementation/src/main/webapp/WEB-INF/web.xml
+++ b/reference-implementation/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
         <realm-name>form-auth</realm-name>
         <form-login-config>
             <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/loginerror.jsp</form-error-page>
+            <form-error-page>/login.jsp?failed=true</form-error-page>
         </form-login-config>        
     </login-config>
     <security-role>
