--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -35,6 +35,7 @@
 		<arquillian.version>1.0.2.Final</arquillian.version>
 		<liquibase.version>2.0.1</liquibase.version>
 		<dbunit-plugin.version>1.0-beta-3</dbunit-plugin.version>
+		<jboss-security.version>3.2.3</jboss-security.version>
 
 		<!-- dependancies for vaadin -->
 		<vaadin.version>6.8.1</vaadin.version>
@@ -46,12 +47,17 @@
 		<apache-pio.version>3.8</apache-pio.version>
 		<vaadin-cdi-utils.version>0.9.9</vaadin-cdi-utils.version>
 
-		<!-- dependencies for JBoss security -->
-		<jboss-security.version>3.2.3</jboss-security.version>
 		<!-- jboss instances -->
 		<jboss.host>localhost</jboss.host>
 		<jboss.port>9999</jboss.port>
 		<jboss.deployment.context>head</jboss.deployment.context>
+
+		<!-- development database connection properties -->
+		
+		<db.url>jdbc:oracle:thin:@10.20.1.242:1527:dev11g</db.url>
+		<db.driver>oracle.jdbc.OracleDriver</db.driver>
+		<db.username>flatbed</db.username>
+		<db.password>flatbed</db.password>
 	</properties>
 
 	<build>
@@ -86,10 +92,27 @@
 					<goals> <goal>check</goal> </goals> <phase>compile</phase> </execution> </executions> -->
 			</plugin>
 
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-enforcer-plugin</artifactId> 
-				<version>1.1.1</version> <executions> <execution> <id>enforce</id> <goals> 
-				<goal>enforce</goal> </goals> <configuration> <rules> <DependencyConvergence/> 
-				</rules> </configuration> </execution> </executions> </plugin> -->
+			<!-- 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>1.1.1</version>
+				<executions>
+					<execution>
+						<id>enforce</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<DependencyConvergence />
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			 -->
+			 
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
@@ -130,18 +153,26 @@
 				<executions>
 					<execution>
 						<phase>process-resources</phase>
-						<configuration>
-							<changeLogFile>src/main/resources/business_table.xml</changeLogFile>
-							<driver>org.h2.Driver</driver>
-							<url>jdbc:h2:file:target/db/h2</url>
-							<username>SA</username>
-							<password></password>
+						<configuration>							
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<changeLogFile>src/main/resources/database.xml</changeLogFile>
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>							
 						</configuration>
 						<goals>
 							<goal>update</goal>
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.oracle</groupId>
+						<artifactId>ojdbc6</artifactId>
+						<version>11.2.0.3</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<plugin>
@@ -149,24 +180,23 @@
 				<artifactId>dbunit-maven-plugin</artifactId>
 				<version>${dbunit-plugin.version}</version>
 				<configuration>
-					<dataTypeFactoryName>org.dbunit.ext.h2.H2DataTypeFactory</dataTypeFactoryName>
-					<driver>org.h2.Driver</driver>
-					<username>SA</username>
-					<password></password>
-					<url>jdbc:h2:file:target/db/h2</url>
-					<src>TestDataSet.xml</src>
+					<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+					<url>${db.url}</url>
+					<driver>${db.driver}</driver>
+					<username>${db.username}</username>
+					<password>${db.password}</password>					
+					<src>${project.build.directory}/test-classes/TestDataSet.xml</src>
 					<type>CLEAN_INSERT</type>
-					<schema></schema>
+					<schema>flatbed</schema>
 					<transaction>true</transaction>
 					<format>flat</format>
-					<skip>${skipTests}</skip>
-					<transaction>true</transaction>
+					<skip>${skipTests}</skip>			
 				</configuration>
 				<dependencies>
 					<dependency>
-						<groupId>com.h2database</groupId>
-						<artifactId>h2</artifactId>
-						<version>1.3.168</version>
+						<groupId>com.oracle</groupId>
+						<artifactId>ojdbc6</artifactId>
+						<version>11.2.0.3</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -291,12 +321,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.168</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
 			<version>${arquillian.version}</version>
@@ -308,6 +332,30 @@
 			<artifactId>jboss-as-arquillian-container-managed</artifactId>
 			<version>${jboss-deployer.version}</version>
 			<scope>test</scope>
+			<!-- 
+			<exclusions>
+				<exclusion>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-common</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.remotingjmx</groupId>
+					<artifactId>remoting-jmx</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.sasl</groupId>
+					<artifactId>jboss-sasl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.marshalling</groupId>
+					<artifactId>jboss-marshalling</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jboss.xnio</groupId>
+					<artifactId>xnio-api</artifactId>
+				</exclusion>
+			</exclusions>
+			 -->
 		</dependency>
 		<!-- end of libraries and frameworks for testing -->
 
@@ -368,16 +416,21 @@
 		</dependency>
 
 		<!-- vaadin dependencies end -->
-		
-		<!-- JBoss security -->
 
-  		<dependency>
-      		<groupId>jboss</groupId>
-      		<artifactId>jboss-jaas</artifactId>
-      		<version>${jboss-security.version}</version>
-      		<scope>provided</scope>
-  		</dependency>
-  		<!-- JBoss security end -->
+		<!-- JBoss security -->
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jbosssx</artifactId>
+			<version>${jboss-security.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-jaas</artifactId>
+			<version>${jboss-security.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- JBoss security end -->
 
 	</dependencies>
 </project>
