--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -46,18 +46,6 @@
 		<commons-io.version>2.4</commons-io.version>
 		<apache-pio.version>3.8</apache-pio.version>
 		<vaadin-cdi-utils.version>0.9.9</vaadin-cdi-utils.version>
-
-		<!-- jboss instances -->
-		<jboss.host>localhost</jboss.host>
-		<jboss.port>9999</jboss.port>
-		<jboss.deployment.context>head</jboss.deployment.context>
-
-		<!-- development database connection properties -->
-		
-		<db.url>jdbc:oracle:thin:@10.20.1.242:1527:dev11g</db.url>
-		<db.driver>oracle.jdbc.OracleDriver</db.driver>
-		<db.username>flatbed</db.username>
-		<db.password>flatbed</db.password>
 	</properties>
 
 	<build>
@@ -92,27 +80,6 @@
 					<goals> <goal>check</goal> </goals> <phase>compile</phase> </execution> </executions> -->
 			</plugin>
 
-			<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.1.1</version>
-				<executions>
-					<execution>
-						<id>enforce</id>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<DependencyConvergence />
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			 -->
-			 
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
@@ -153,13 +120,13 @@
 				<executions>
 					<execution>
 						<phase>process-resources</phase>
-						<configuration>							
+						<configuration>
 							<url>${db.url}</url>
 							<driver>${db.driver}</driver>
 							<username>${db.username}</username>
 							<password>${db.password}</password>
 							<changeLogFile>src/main/resources/database.xml</changeLogFile>
-							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>							
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
 						</configuration>
 						<goals>
 							<goal>update</goal>
@@ -184,13 +151,13 @@
 					<url>${db.url}</url>
 					<driver>${db.driver}</driver>
 					<username>${db.username}</username>
-					<password>${db.password}</password>					
+					<password>${db.password}</password>
 					<src>${project.build.directory}/test-classes/TestDataSet.xml</src>
 					<type>CLEAN_INSERT</type>
-					<schema>flatbed</schema>
+					<schema>${db.username}</schema>
 					<transaction>true</transaction>
 					<format>flat</format>
-					<skip>${skipTests}</skip>			
+					<skip>${skipTests}</skip>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -210,7 +177,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-
 
 		<pluginManagement>
 			<plugins>
@@ -326,36 +292,12 @@
 			<version>${arquillian.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+	
 		<dependency>
 			<groupId>org.jboss.as</groupId>
 			<artifactId>jboss-as-arquillian-container-managed</artifactId>
 			<version>${jboss-deployer.version}</version>
 			<scope>test</scope>
-			<!-- 
-			<exclusions>
-				<exclusion>
-					<groupId>org.jboss.as</groupId>
-					<artifactId>jboss-as-arquillian-common</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jboss.remotingjmx</groupId>
-					<artifactId>remoting-jmx</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jboss.sasl</groupId>
-					<artifactId>jboss-sasl</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jboss.marshalling</groupId>
-					<artifactId>jboss-marshalling</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jboss.xnio</groupId>
-					<artifactId>xnio-api</artifactId>
-				</exclusion>
-			</exclusions>
-			 -->
 		</dependency>
 		<!-- end of libraries and frameworks for testing -->
 
@@ -431,6 +373,87 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- JBoss security end -->
-
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${arquillian.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<profiles>
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>default-test</id>
+			
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9999</jboss.port>
+				<jboss.deployment.context>head</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test1</db.username>
+				<db.password>1111</db.password>
+			</properties>
+		</profile>
+		
+		<profile>
+			<id>development</id>
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9999</jboss.port>
+				<jboss.deployment.context>dev</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test1</db.username>
+				<db.password>1111</db.password>
+			</properties>
+		</profile>
+		
+		<profile>
+			<id>qa</id>
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9999</jboss.port>
+				<jboss.deployment.context>qa</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test2</db.username>
+				<db.password>1111</db.password>
+			</properties>
+		</profile>
+		
+		<profile>
+			<id>regression</id>
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9999</jboss.port>
+				<jboss.deployment.context>regression</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test3</db.username>
+				<db.password>1111</db.password>
+			</properties>
+		</profile>
+	</profiles>
 </project>
