--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -113,71 +113,6 @@
 				</dependencies>
 			</plugin>
 
-			<plugin>
-				<groupId>org.liquibase</groupId>
-				<artifactId>liquibase-maven-plugin</artifactId>
-				<version>${liquibase.version}</version>
-				<configuration>
-					<url>${db.url}</url>
-					<driver>${db.driver}</driver>
-					<username>${db.username}</username>
-					<password>${db.password}</password>
-					<changeLogFile>${changeset.file}</changeLogFile>
-					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-				</configuration>
-				<executions>
-					<execution>
-						<id>update</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>update</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.oracle</groupId>
-						<artifactId>ojdbc6</artifactId>
-						<version>11.2.0.3</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>dbunit-maven-plugin</artifactId>
-				<version>${dbunit-plugin.version}</version>
-				<configuration>
-					<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
-					<url>${db.url}</url>
-					<driver>${db.driver}</driver>
-					<username>${db.username}</username>
-					<password>${db.password}</password>
-					<src>${testdata.file}</src>
-					<type>CLEAN_INSERT</type>
-					<schema>${db.username}</schema>
-					<transaction>true</transaction>
-					<format>flat</format>
-					<skip>${skipTests}</skip>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.oracle</groupId>
-						<artifactId>ojdbc6</artifactId>
-						<version>11.2.0.3</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>operation</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>operation</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
 			<!-- attach additional resources. These are used by jenkins promotion builds -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -441,6 +376,76 @@
 				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
 				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
 			</properties>
+			
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-maven-plugin</artifactId>
+						<version>${liquibase.version}</version>
+						<configuration>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<changeLogFile>${changeset.file}</changeLogFile>
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+						</configuration>
+						<executions>
+							<execution>
+								<id>update</id>
+								<phase>test-compile</phase>
+								<goals>
+									<goal>update</goal>
+								</goals>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+					
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>dbunit-maven-plugin</artifactId>
+						<version>${dbunit-plugin.version}</version>
+						<configuration>
+							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<src>${testdata.file}</src>
+							<type>CLEAN_INSERT</type>
+							<schema>${db.username}</schema>
+							<transaction>true</transaction>
+							<format>flat</format>
+							<skip>${skipTests}</skip>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+						<executions>
+							<execution>
+								<id>operation</id>
+								<phase>test-compile</phase>
+								<goals>
+									<goal>operation</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>				
+				</plugins>
+			</build>
+			
 		</profile>
 
 		<profile>
@@ -461,6 +466,61 @@
 				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
 				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
 			</properties>
+			
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-maven-plugin</artifactId>
+						<version>${liquibase.version}</version>
+						<configuration>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<changeLogFile>${changeset.file}</changeLogFile>
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+						</configuration>
+						<executions>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+					
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>dbunit-maven-plugin</artifactId>
+						<version>${dbunit-plugin.version}</version>
+						<configuration>
+							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<src>${testdata.file}</src>
+							<type>CLEAN_INSERT</type>
+							<schema>${db.username}</schema>
+							<transaction>true</transaction>
+							<format>flat</format>
+							<skip>${skipTests}</skip>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+						<executions>
+						</executions>
+					</plugin>				
+				</plugins>
+			</build>
 		</profile>
 
 		<profile>
@@ -479,8 +539,63 @@
 
 				<!-- resource location -->
 				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
-				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
+				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>				
 			</properties>
+			
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-maven-plugin</artifactId>
+						<version>${liquibase.version}</version>
+						<configuration>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<changeLogFile>${changeset.file}</changeLogFile>
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+						</configuration>
+						<executions>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+					
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>dbunit-maven-plugin</artifactId>
+						<version>${dbunit-plugin.version}</version>
+						<configuration>
+							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<src>${testdata.file}</src>
+							<type>CLEAN_INSERT</type>
+							<schema>${db.username}</schema>
+							<transaction>true</transaction>
+							<format>flat</format>
+							<skip>${skipTests}</skip>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+						<executions>
+						</executions>
+					</plugin>				
+				</plugins>
+			</build>
 		</profile>
 
 		<profile>
@@ -501,6 +616,61 @@
 				<changeset.file>${project.build.directory}/${artifactId}-${version}-changeset.xml</changeset.file>
 				<testdata.file>${project.build.directory}/${artifactId}-${version}-testdataset.xml</testdata.file>
 			</properties>
+			
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-maven-plugin</artifactId>
+						<version>${liquibase.version}</version>
+						<configuration>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<changeLogFile>${changeset.file}</changeLogFile>
+							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+						</configuration>
+						<executions>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+					
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>dbunit-maven-plugin</artifactId>
+						<version>${dbunit-plugin.version}</version>
+						<configuration>
+							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+							<url>${db.url}</url>
+							<driver>${db.driver}</driver>
+							<username>${db.username}</username>
+							<password>${db.password}</password>
+							<src>${testdata.file}</src>
+							<type>CLEAN_INSERT</type>
+							<schema>${db.username}</schema>
+							<transaction>true</transaction>
+							<format>flat</format>
+							<skip>${skipTests}</skip>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>com.oracle</groupId>
+								<artifactId>ojdbc6</artifactId>
+								<version>11.2.0.3</version>
+							</dependency>
+						</dependencies>
+						<executions>
+						</executions>
+					</plugin>				
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
